@@ -849,7 +849,10 @@ load_file(fname, script)
     else if (f != rb_stdin) {
 	rb_io_close(f);
     }
-    rb_gc();
+
+    if (ruby_parser_stack_on_heap()) {
+        rb_gc();
+    }
 }
 
 void
